[package]
name = "noders-anytls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
hex = "0.4.3"
libc = "0.2.177"
md-5 = "0.10.6"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.12.3"
rsa = { version = "0.9.10", features = ["pem", "sha2"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
socket2 = "0.6.2"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "std"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "time"] }
