[package]
name = "noders-anytls"
version = "0.1.0"
edition = "2024"

[features]
default = []
linux-mimalloc = ["dep:mimalloc"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
hex = "0.4.3"
libc = "0.2.177"
md-5 = "0.10.6"
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"] }
rand = "0.8.5"
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "pem", "ring"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls", "http2"] }
regex = "1.12.3"
rustc-hash = "2.1.1"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
socket2 = "0.6.2"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "std"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "time", "test-util", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, optional = true }

